--- a/public/scss/pages/_giftcards.scss
+++ b/public/scss/pages/_giftcards.scss
@@ -48,6 +48,7 @@ $light-grey: #bebebe;
         border-radius: 5px;
         font-size: 1.2rem;
         background: $light-grey;
+        color: black;
       }
       .active{
         background: $red !important;
